created folders and installed screenbuilder